--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <div class="data__widget widget">
                 <p class="widget__temp" id="temp"></p>
             </div>
+            <ul class="data__pages" id="pages">
+            </ul>
         </div>
     </form>
 </main>
