--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="data">
         <img src="img/load.svg" alt="Загрузка..." class="data__load rotating" id="load" hidden>
         <p class="data__error" id="dta-err"></p>
-        <div class="data__widget widget" id="widget" hidden>
+        <div class="data__widget widget" id="widget" style="visibility: hidden">
             <div class="widget__main">
                 <div class="widget__left-side">
                     <p class="widget__region" id="region"></p>
