--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 </div>
             </div>
             <div class="widget__additional">
-                <p class="widget__humidity" id="humidity">22</p>
-                <p class="widget__wind" id="wind">6</p>
+                <p class="widget__humidity" id="humidity"></p>
+                <p class="widget__wind" id="wind"></p>
             </div>
             <div class="widget__active">
                 <button type="button" class="widget__show-map-btn" id="show-map">Показать карту</button>
