added time to widget + final fixes + readme

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <div class="widget__additional">
                 <p class="widget__humidity" id="humidity">NaN</p>
                 <p class="widget__wind" id="wind">NaN</p>
+                <p class="widget__time" id="time">12:00</p>
             </div>
             <div class="widget__active">
                 <button type="button" class="widget__show-map-btn" id="show-map">Показать карту</button>
